html and bootstrap foundation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
 <body>
 <h1 id="Main Title">Welcome to the Story Builder!</h1>
 
-
+<div class="container text-center">
+    <div class="row">
+      <div class="col">col</div>
+      <div class="col">
+        <div class="card text-center" style="width: 18rem;">
+            <img src="images/mystery.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+      </div>
+      <div class="col">col
+      </div>
+      <div class="col">col</div>
+    </div>
+</div>
 
 <script src="storybuilder.js" charset="utf-8"></script>
 </body>
