--- a/index.html
+++ b/index.html
@@ -19,20 +19,66 @@
 
 <div class="container text-center">
     <div class="row">
-      <div class="col">col</div>
+
+
+      <!--main character-->
       <div class="col">
         <div class="card text-center" style="width: 18rem;">
-            <img src="images/mystery.png" class="card-img-top" alt="...">
+            <img src="images/mystery.png" class="card-img-top" alt="..." id="main-img">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <button type="button" class="btn btn-outline-info" onclick="findMain()">Info</button>
             </div>
         </div>
       </div>
-      <div class="col">col
+
+      <!--sidekick-->
+      <div class="col">
+        <div class="card text-center" style="width: 18rem;">
+            <img src="images/mystery.png" class="card-img-top" alt="..." id="sidekick-img">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <button type="button" class="btn btn-outline-info" onclick="findSidekick()">Info</button>
+            </div>
+        </div>
       </div>
-      <div class="col">col</div>
+
+
+    </div>
+</div>
+
+
+<div class="container text-center">
+    <div class="row">
+
+
+      <!--object-->
+      <div class="col">
+        <div class="card text-center" style="width: 18rem;">
+            <img src="images/mystery.png" class="card-img-top" alt="..." id="object-img">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <button type="button" class="btn btn-outline-info" onclick="findObject()">Info</button>
+            </div>
+        </div>
+      </div>
+
+      <!--place-->
+      <div class="col">
+        <div class="card text-center" style="width: 18rem;">
+            <img src="images/mystery.png" class="card-img-top" alt="..." id="place-img">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <button type="button" class="btn btn-outline-info" onclick="findPlace()">Info</button>
+            </div>
+        </div>
+      </div>
+
+
     </div>
 </div>
 
