--- a/index.html
+++ b/index.html
@@ -15,32 +15,37 @@
 </head>
 
 <body>
-<h1 id="Main Title">Welcome to the Story Builder!</h1>
+<div class="col d-flex justify-content-center">
+    <h1 id="Main Title">Welcome to the Story Builder!</h1>
+</div>
+<div class="col d-flex justify-content-center">
+    <h4>Find your main character, their sidekick, an object and a place to start creating your story.</h4>
+</div>
 
 <div class="container text-center">
     <div class="row">
 
 
       <!--main character-->
-      <div class="col">
+      <div class="col d-flex justify-content-center">
         <div class="card text-center" style="width: 18rem;">
-            <img src="images/mystery.png" class="card-img-top" alt="..." id="main-img">
+            <img src="images/mystery.png" class="card-img-top" alt="main character" id="main-img">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <button type="button" class="btn btn-outline-info" onclick="findMain()">Info</button>
+              <h5 class="card-title">Main Character</h5>
+              <p class="card-text">The story centers around this character and the obstacles they face.</p>
+              <button type="button" class="btn btn-outline-info" onclick="findMain()">Find</button>
             </div>
         </div>
       </div>
 
       <!--sidekick-->
-      <div class="col">
+      <div class="col d-flex justify-content-center">
         <div class="card text-center" style="width: 18rem;">
-            <img src="images/mystery.png" class="card-img-top" alt="..." id="sidekick-img">
+            <img src="images/mystery.png" class="card-img-top" alt="sidekick" id="sidekick-img">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <button type="button" class="btn btn-outline-info" onclick="findSidekick()">Info</button>
+              <h5 class="card-title">Sidekick, or Secondary Character</h5>
+              <p class="card-text">The main character needs a sidekick! Someone to help along the journey.</p>
+              <button type="button" class="btn btn-outline-info" onclick="findSidekick()">Find</button>
             </div>
         </div>
       </div>
@@ -55,25 +60,25 @@
 
 
       <!--object-->
-      <div class="col">
+      <div class="col d-flex justify-content-center">
         <div class="card text-center" style="width: 18rem;">
-            <img src="images/mystery.png" class="card-img-top" alt="..." id="object-img">
+            <img src="images/mystery.png" class="card-img-top" alt="object" id="object-img">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <button type="button" class="btn btn-outline-info" onclick="findObject()">Info</button>
+              <h5 class="card-title">An Object</h5>
+              <p class="card-text">Sometimes a hero can do surprising things with an object or they might be lead somewhere by it.</p>
+              <button type="button" class="btn btn-outline-info" onclick="findObject()">Find</button>
             </div>
         </div>
       </div>
 
       <!--place-->
-      <div class="col">
+      <div class="col d-flex justify-content-center">
         <div class="card text-center" style="width: 18rem;">
-            <img src="images/mystery.png" class="card-img-top" alt="..." id="place-img">
+            <img src="images/mystery.png" class="card-img-top" alt="place" id="place-img">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <button type="button" class="btn btn-outline-info" onclick="findPlace()">Info</button>
+              <h5 class="card-title">A Place</h5>
+              <p class="card-text">The characters have to be or go somewhere.</p>
+              <button type="button" class="btn btn-outline-info" onclick="findPlace()">Find</button>
             </div>
         </div>
       </div>
