--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <link rel="icon" href="favicon.ico">
     <!--CSS Stylesheets-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css /styles.css">
     
 </head>
 
 <body>
-<div class="col d-flex justify-content-center">
-    <h1 id="Main Title">Welcome to the Story Builder!</h1>
+<div class="col" id="main-title">
+    <h1>Welcome to the Story Builder!</h1>
 </div>
-<div class="col d-flex justify-content-center">
+<div class="col" id="sub-title">
     <h4>Find your main character, their sidekick, an object and a place to start creating your story.</h4>
 </div>
 
@@ -27,57 +27,56 @@
 
 
       <!--main character-->
-      <div class="col d-flex justify-content-center">
+      <div class="col d-flex justify-content-center story-card-column">
         <div class="card text-center" style="width: 18rem;">
             <img src="images/mystery.png" class="card-img-top" alt="main character" id="main-img">
             <div class="card-body">
               <h5 class="card-title">Main Character</h5>
-              <p class="card-text">The story centers around this character and the obstacles they face.</p>
+              <p class="card-text">The story centers around this character and the obstacles they face.</p>             
+            </div>
+            <div class="card-footer">
               <button type="button" class="btn btn-outline-info" onclick="findMain()">Find</button>
             </div>
         </div>
       </div>
 
       <!--sidekick-->
-      <div class="col d-flex justify-content-center">
+      <div class="col d-flex justify-content-center story-card-column">
         <div class="card text-center" style="width: 18rem;">
             <img src="images/mystery.png" class="card-img-top" alt="sidekick" id="sidekick-img">
             <div class="card-body">
-              <h5 class="card-title">Sidekick, or Secondary Character</h5>
+              <h5 class="card-title">Sidekick</h5>
               <p class="card-text">The main character needs a sidekick! Someone to help along the journey.</p>
+            </div>
+            <div class="card-footer">
               <button type="button" class="btn btn-outline-info" onclick="findSidekick()">Find</button>
             </div>
         </div>
       </div>
 
-
-    </div>
-</div>
-
-
-<div class="container text-center">
-    <div class="row">
-
-
       <!--object-->
-      <div class="col d-flex justify-content-center">
+      <div class="col d-flex justify-content-center story-card-column">
         <div class="card text-center" style="width: 18rem;">
             <img src="images/mystery.png" class="card-img-top" alt="object" id="object-img">
             <div class="card-body">
               <h5 class="card-title">An Object</h5>
               <p class="card-text">Sometimes a hero can do surprising things with an object or they might be lead somewhere by it.</p>
+            </div>
+            <div class="card-footer">
               <button type="button" class="btn btn-outline-info" onclick="findObject()">Find</button>
             </div>
         </div>
       </div>
 
       <!--place-->
-      <div class="col d-flex justify-content-center">
+      <div class="col d-flex justify-content-center story-card-column">
         <div class="card text-center" style="width: 18rem;">
             <img src="images/mystery.png" class="card-img-top" alt="place" id="place-img">
             <div class="card-body">
               <h5 class="card-title">A Place</h5>
               <p class="card-text">The characters have to be or go somewhere.</p>
+            </div>
+            <div class="card-footer">
               <button type="button" class="btn btn-outline-info" onclick="findPlace()">Find</button>
             </div>
         </div>
@@ -86,6 +85,8 @@
 
     </div>
 </div>
+
+<!--TO DO: FOOTER-->
 
 <script src="storybuilder.js" charset="utf-8"></script>
 </body>
