refactoring and styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="This free Children's Story Builder can be used by teachers and students to 
+    generate characters, an object and a place to inspire your storytelling and building.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Children's Story Builder</title>
 
@@ -15,9 +17,10 @@
 </head>
 
 <body>
-<div class="col" id="main-title">
-    <h1>Welcome to the Story Builder!</h1>
-</div>
+  <header>
+    <h1>Welcome to the Story Builder</h1>
+  </header>
+
 <div class="col" id="sub-title">
     <h4>Find your main character, their sidekick, an object and a place to start creating your story.</h4>
 </div>
@@ -86,7 +89,14 @@
     </div>
 </div>
 
-<!--TO DO: FOOTER-->
+<!--footer-->
+<footer>
+  <p class="footer-paragraph">
+    © 
+    <script type="text/javascript"> document.write(new Date().getFullYear()); </script> 
+    <a class="footer-link" target="_blank" href="https://www.simonecodes.uk/">simonecodes</a> 
+  </p>
+</footer>
 
 <script src="storybuilder.js" charset="utf-8"></script>
 </body>
