improved button accessibility

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <p class="card-text">The story centers around this character and the obstacles they face.</p>             
             </div>
             <div class="card-footer">
-              <button type="button" class="btn btn-outline-info" onclick="findMain()">Find</button>
+              <button type="button" class="btn btn-outline-dark" onclick="findMain()">Find</button>
             </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
               <p class="card-text">The main character needs a sidekick! Someone to help along the journey.</p>
             </div>
             <div class="card-footer">
-              <button type="button" class="btn btn-outline-info" onclick="findSidekick()">Find</button>
+              <button type="button" class="btn btn-outline-dark" onclick="findSidekick()">Find</button>
             </div>
         </div>
       </div>
@@ -66,7 +66,7 @@
               <p class="card-text">Sometimes a hero can do surprising things with an object or they might be lead somewhere by it.</p>
             </div>
             <div class="card-footer">
-              <button type="button" class="btn btn-outline-info" onclick="findObject()">Find</button>
+              <button type="button" class="btn btn-outline-dark" onclick="findObject()">Find</button>
             </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
               <p class="card-text">The characters have to be or go somewhere.</p>
             </div>
             <div class="card-footer">
-              <button type="button" class="btn btn-outline-info" onclick="findPlace()">Find</button>
+              <button type="button" class="btn btn-outline-dark" onclick="findPlace()">Find</button>
             </div>
         </div>
       </div>
